@@ -23,13 +23,13 @@ import org.eclipse.sirius.components.core.RepresentationMetadata;
 import org.eclipse.sirius.components.core.api.IEditingContext;
 import org.eclipse.sirius.components.core.api.IObjectService;
 import org.eclipse.sirius.components.core.api.IRepresentationMetadataSearchService;
-import org.eclipse.sirius.components.core.api.WorkbenchSelection;
-import org.eclipse.sirius.components.core.api.WorkbenchSelectionEntry;
 import org.eclipse.sirius.components.diagrams.Diagram;
 import org.eclipse.sirius.components.emf.compatibility.modeloperations.ChildModelOperationHandler;
 import org.eclipse.sirius.components.interpreter.AQLInterpreter;
 import org.eclipse.sirius.components.representations.IStatus;
 import org.eclipse.sirius.components.representations.Success;
+import org.eclipse.sirius.components.representations.WorkbenchSelection;
+import org.eclipse.sirius.components.representations.WorkbenchSelectionEntry;
 import org.eclipse.sirius.diagram.description.DescriptionFactory;
 import org.eclipse.sirius.diagram.description.DiagramDescription;
 import org.eclipse.sirius.diagram.description.tool.Navigation;
